Prepull from main

--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
     />
   </head>
 
-  <body>
+  <body class="body">
     <div class="flex-column justify-space-around">
       <header class="header">
         <div>Logo</div>
