--- a/views/login.html
+++ b/views/login.html
@@ -21,7 +21,7 @@
         <nav>Hamburger</nav>
     </header>
     <main>
-        <div class="login-page">
+        <div class="login-page" id="login-form">
             <h2>Welcome back to Study Buddies!</h2>
             <form>
                 <div class="form-group">
@@ -44,5 +44,9 @@
         <div>links</div>
         <div>contact us</div>
       </footer>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+        integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <script src="../public/js/login.js"></script>
   </body>
 </html>
