--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <title>Study Buddies</title>
-    <link rel="stylesheet" href="../public/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -12,14 +11,29 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
+    <link rel="stylesheet" href="../public/css/style.css" />
   </head>
 
-  <body>
+  <body class="Body">
     <div class="flex-column justify-space-around">
       <header class="header">
-        <div>Logo</div>
-        <h1>Study Buddies</h1>
-        <nav>hambuger</nav>
+        <!-- <img id="logo" src="../public/assets/STUDY-BUDDIES.png" alt="" /> -->
+        <h1>The Study Buddy</h1>
+        <div class="dropdown">
+          <button
+            class="btn dropdown-toggle test"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Dropdown button
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </div>
       </header>
       <main class="container container-fluid mt-5">
         <div class="row row-cols-1 row-cols-md-3 g-4">
