Created the subtopic details html page

--- a/views/subtopics.html
+++ b/views/subtopics.html
@@ -21,6 +21,7 @@
         <h1>Study Buddies</h1>
         <nav>hambuger</nav>
       </header>
+      <h2 class="h2 text-center p-3">Subtopics</h2>
 
       <main class="container container-fluid mt-5">
         <div class="container text-center">
