--- a/views/index.html
+++ b/views/index.html
@@ -17,20 +17,21 @@
   <body class="body">
     <div class="flex-column justify-space-around">
       <header class="header">
-        <h1>The Study Buddy</h1>
+        <img id="logo" src="../public/assets/STUDY-BUDDIDES-LOGO.png" alt="" />
+        <h1 class="heading">The Study Buddy</h1>
         <div class="dropdown">
           <button
-            class="btn dropdown-toggle test"
+            class="btn dropbox"
             type="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Dropdown button
+            <i class="bi bi-list-stars" style="font-size: 6vh"></i>
           </button>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">Another Action</a></li>
+            <li><a class="dropdown-item" href="#">Something Else Here</a></li>
           </ul>
         </div>
       </header>
@@ -113,8 +114,8 @@
     ></script>
   </body>
   <footer class="footer">
-    <div>about</div>
-    <div>links</div>
-    <div>contact us</div>
+    <div>About</div>
+    <div></div>
+    <div></div>
   </footer>
 </html>
