--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik+Vinyl&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik+Vinyl&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
 
 :root {
@@ -12,53 +12,46 @@
   --darker: rgba(0, 0, 0, 0.5)
 }
 
-
-
 .body {
   background-color: var(--dark);
- 
 }
 .header {
   display: flex;
   justify-content: center;
   opacity: 90%;
   z-index: 500;
-
   flex-direction: row;
   align-content: center;
   justify-content: space-between;
   background-color: var(--darker);
-  font-family:'Pacifico', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Pacifico", "Arial Narrow", Arial, sans-serif;
   color: var(--neonBlue);
   position: sticky;
-  top:0px
+  top: 0px;
 }
 
-.heading{
+.heading {
   font-size: 2.2rem;
 }
-
 
 .dropbox {
   display: flex;
   margin-top: -1.5vh;
   height: 75%;
-  color: var(--neonBlue) ;
+  color: var(--neonBlue);
   /* background-color: var(--neonBlue); */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1.5rem;
-  
 }
-.bi-list-stars{
-
+.bi-list-stars {
 }
-.dropbox:hover{
+.dropbox:hover {
   cursor: pointer;
   height: 110%;
-  background: rgb(92,225,230);
-background: linear-gradient(18deg, rgba(92,225,230,1) 16%, rgba(143,171,230,1) 47%, rgba(203,108,230,1) 80%);
+  background: rgb(92, 225, 230);
+  background: linear-gradient(18deg, rgba(92, 225, 230, 1) 16%, rgba(143, 171, 230, 1) 47%, rgba(203, 108, 230, 1) 80%);
   color: var(--dark);
- box-shadow: 0 0 0 3px white;
+  box-shadow: 0 0 0 3px white;
 }
 
 .footer {
@@ -83,15 +76,14 @@ background: linear-gradient(18deg, rgba(92,225,230,1) 16%, rgba(143,171,230,1) 4
   align-content: center;
   justify-content: space-between;
 }
-.col:hover{
-cursor: pointer;
+.col:hover {
+  cursor: pointer;
 }
-#logo{
+#logo {
   display: flex;
   max-width: 12vh;
   max-height: 10vh;
   padding: 1.5vh;
-
 }
 .btn-favorites {
   display: flex;
