--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,7 +13,7 @@
       <button type="submit" class="submitBtn">Login</button>
     </div>
     </form>
-    <a href="./sign-up.html">Don't have an account? Click here to sign-up!</a>
+    <a href="http://localhost:3001/api/users/sign-up">Don't have an account? Click here to sign-up!</a>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
 integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
