Stylized homepage cards

--- a/views/index.html
+++ b/views/index.html
@@ -36,75 +36,66 @@
         </div>
       </header>
     </div>
-    <main class="container container-fluid mt-5">
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card" style="width: 18rem">
-            <div class="card-body">
-              <div class="cardHeader">
-                <h5 class="card-title">HTML</h5>
-                <button class="btn btn-favorites">
-                  <i class="bi bi-star"></i>
-                </button>
-              </div>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-          </div>
+    <main>
+      <div class="card-body">
+        <div class="cardHeader">
+          <h5 class="card-title">HTML</h5>
+          <button class="btn btn-favorites">
+            <i class="bi bi-star"></i>
+          </button>
         </div>
-    
-        <div class="col">
-          <div class="card" style="width: 18rem">
-            <div class="card-body">
-              <div class="cardHeader">
-                <h5 class="card-title">HTML</h5>
-                <button class="btn btn-favorites">
-                  <i class="bi bi-star"></i>
-                </button>
-              </div>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-          </div>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up
+          the bulk of the card's content.
+        </p>
+      </div>
+      <div class="card-body">
+        <div class="cardHeader">
+          <h5 class="card-title">Nodejs</h5>
+          <button class="btn btn-favorites">
+            <i class="bi bi-star"></i>
+          </button>
         </div>
-    
-        <div class="col">
-          <div class="card" style="width: 18rem">
-            <div class="card-body">
-              <div class="cardHeader">
-                <h5 class="card-title">HTML</h5>
-                <button class="btn btn-favorites">
-                  <i class="bi bi-star"></i>
-                </button>
-              </div>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-          </div>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up
+          the bulk of the card's content.
+        </p>
+      </div>
+      <div class="card-body">
+        <div class="cardHeader">
+          <h5 class="card-title">CSS</h5>
+          <button class="btn btn-favorites">
+            <i class="bi bi-star"></i>
+          </button>
         </div>
-    
-        <div class="col">
-          <div class="card" style="width: 18rem">
-            <div class="card-body">
-              <div class="cardHeader">
-                <h5 class="card-title">HTML</h5>
-                <button class="btn btn-favorites">
-                  <i class="bi bi-star"></i>
-                </button>
-              </div>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-          </div>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up
+          the bulk of the card's content.
+        </p>
+      </div>
+      <div class="card-body">
+        <div class="cardHeader">
+          <h5 class="card-title">JavaScript</h5>
+          <button class="btn btn-favorites">
+            <i class="bi bi-star"></i>
+          </button>
         </div>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up
+          the bulk of the card's content.
+        </p>
+      </div>
+      <div class="card-body">
+        <div class="cardHeader">
+          <h5 class="card-title">Web APIs</h5>
+          <button class="btn btn-favorites">
+            <i class="bi bi-star"></i>
+          </button>
+        </div>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up
+          the bulk of the card's content.
+        </p>
       </div>
     </main>
     <script
