--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,28 +2,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
 
 :root {
-  --neonMagenta: rgb(177, 35, 177);
+  --neonMagenta: rgb(203, 108, 230);
   --neonRed: rgb(240, 22, 80);
   --neonYellow: rgb(255, 255, 115);
-  --neonBlue: rgb(35, 249, 231);
+  --neonBlue: rgb(92, 225, 230);
   --neonPurple: rgb(170, 26, 183);
   --white: white;
   --dark: rgb(55, 52, 52);
   --darker: rgba(0, 0, 0, 0.5)
 }
 
-
-
 .body {
   background-color: var(--dark);
- 
 }
+
 .header {
   display: flex;
   justify-content: center;
   opacity: 90%;
   z-index: 500;
-
   flex-direction: row;
   align-content: center;
   justify-content: space-between;
@@ -36,6 +33,7 @@
 
 .heading{
   font-size: 2.2rem;
+  margin-top: 1.5vh;
 }
 
 
@@ -44,21 +42,17 @@
   margin-top: -1.5vh;
   height: 75%;
   color: var(--neonBlue) ;
-  /* background-color: var(--neonBlue); */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.5rem;
   
 }
-.bi-list-stars{
 
-}
 .dropbox:hover{
   cursor: pointer;
-  height: 110%;
+  height: 115%;
   background: rgb(92,225,230);
-background: linear-gradient(18deg, rgba(92,225,230,1) 16%, rgba(143,171,230,1) 47%, rgba(203,108,230,1) 80%);
+  background: linear-gradient(18deg, rgba(92,225,230,1) 16%, rgba(143,171,230,1) 47%, rgba(203,108,230,1) 80%);
   color: var(--dark);
- box-shadow: 0 0 0 3px white;
 }
 
 .footer {
@@ -100,12 +94,38 @@ cursor: pointer;
 .bi-star {
   display: flex;
   margin-top: -5px;
+  color: var(--neonBlue);
 }
 
 .bi-star:hover {
   color: var(--neonYellow);
 }
 
-.card:hover {
+.card-body:hover {
   cursor: pointer;
+  background: rgb(92,225,230);
+  background: linear-gradient(18deg, rgba(92,225,230,1) 16%, rgba(143,171,230,1) 47%, rgba(203,108,230,1) 80%);
+  color: black;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card-body {
+  background-color: var(--darker);
+  color: white;
+  justify-content: space-between;
+  margin: 2%;
+  max-width: 25%;
+  border-radius: 1vh;
+  outline-style: solid;
+  outline-color: var(--neonBlue);
+}
+
+.cardHeader {
+  color: var(--neonMagenta);
 }
