--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="../public/css/style.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="../public/assets/STUDY-BUDDIDES-LOGO.png" />
   </head>
 
   <body class="body">
