added carosel to hompage

--- a/views/index.html
+++ b/views/index.html
@@ -35,6 +35,50 @@
           </ul>
         </div>
       </header>
+      <div
+        id="carouselExampleFade"
+        class="carousel slide carousel-fade"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="../public/assets/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg"
+              class="d-block"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="../public/assets/cookie-the-pom-gySMaocSdqs-unsplash.jpg"
+              class="d-block"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img src="../public/assets/andrew-neel-9moikpaufvg-unsplash.jpg"
+            class="d-block alt="..." />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleFade"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleFade"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
       <main class="container container-fluid mt-5">
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
@@ -114,7 +158,7 @@
     ></script>
   </body>
   <footer class="footer">
-    <div>About</div>
+    <img id="footlogo" src="../public/assets/STUDY-BUDDIDES-LOGO.png" alt="" />
     <div></div>
     <div></div>
   </footer>
