--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,7 @@
 
 .body {
   background-color: var(--dark);
+  position: relative;
  
 }
 .header {
@@ -108,4 +109,18 @@ cursor: pointer;
 
 .card:hover {
   cursor: pointer;
+}
+.carousel{
+  position: absolute;
+  opacity: 60%;
+  filter: blur(2px);
+
+}
+.carousel-item img{
+  width: 100%;
+  height: 100%;
+}
+#footlogo {
+  max-height: 5vh;
+  max-width: 5vh;
 }
