creating the subtopics details handlebar page

--- a/views/subtopics.html
+++ b/views/subtopics.html
@@ -22,8 +22,8 @@
         <nav>hambuger</nav>
       </header>
       <h2 class="h2 text-center p-3">Subtopics</h2>
-
-      <main class="container container-fluid mt-5">
+<main>
+      <div class="container container-fluid mt-5">
         <div class="container text-center">
           <div class="row p-3">
             <div class= "col border border-dark m-1" id="div1"
@@ -115,6 +115,7 @@
             </div>
           </div>
         </div>
+      </div>
       </main>
     </div>
     <script
