--- a/views/subtopicsDetail.html
+++ b/views/subtopicsDetail.html
@@ -22,8 +22,8 @@
         <nav>hambuger</nav>
       </header>
       <h2 class="h2 text-center p-3">Name of Subtopic Selected</h2>
-
-      <main class="container container-fluid mt-5">
+<main>
+      <div class="container container-fluid mt-5">
         <div class="container">
           <div class="row p-3">
             <div class="col border border-dark m-1" id="div1">
@@ -33,7 +33,7 @@
                   <p class="card-text">Brief description pulled from db</p>
                 </div>
               </div>
-              <div class="card m-1" style="width: 100%">
+              <!-- <div class="card m-1" style="width: 100%">
                 <div class="card-body">
                   <h3 class="exampleCode text-left">Code Demos</h3>
                   <p class="card-text">
@@ -43,12 +43,23 @@
                     beatae aperiam aut, rem impedit quam! Repellat ducimus
                     minima necessitatibus quas!
                   </p>
-                </div>
+                </div> -->
               </div>
             </div>
-            <div class="col border border-dark m-1 text-center">
+            <div class="row border border-dark m-1 text-center">
               <h3>Code examples</h3>
-              <div class="card m-1" style="width: 100%">
+              <div class="card m-1" style="width: 30%">
+                <div class="card-body" style="width: 100%">
+                  <h5 class="card-title">Code Title from DB</h5>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quasi corrupti corporis in sunt voluptatem ex consectetur,
+                    commodi debitis recusandae quis excepturi odio tempore
+                    praesentium laboriosam sed nisi eos culpa et.
+                  </p>
+                </div>
+              </div>
+              <div class="card m-1" style="width: 30%">
                 <div class="card-body">
                   <h5 class="card-title">Code Title from DB</h5>
                   <p class="card-text">
@@ -59,19 +70,8 @@
                   </p>
                 </div>
               </div>
-              <div class="card m-1" style="width: 100%">
-                <div class="card-body">
-                  <h5 class="card-title">Code Title from DB</h5>
-                  <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Quasi corrupti corporis in sunt voluptatem ex consectetur,
-                    commodi debitis recusandae quis excepturi odio tempore
-                    praesentium laboriosam sed nisi eos culpa et.
-                  </p>
-                </div>
-              </div>
-              <div class="card m-1" style="width: 100%">
-                <div class="card-body">
+              <div class="card m-1 max-width:100%" style="width: 30%;">
+                <div class="card-body"  style="width: 18rem;">
                   <h5 class="card-title">Code Title from DB</h5>
                   <p class="card-text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -84,6 +84,7 @@
             </div>
           </div>
         </div>
+        <main>
       </main>
     </div>
     <script
