--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,9 +19,11 @@
             <i class="bi bi-list-stars" style="font-size: 6vh"></i>
           </button>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another Action</a></li>
-            <li><a class="dropdown-item" href="#">Something Else Here</a></li>
+            {{#if logged_in}}
+              <li><a class="dropdown-item" href="http://localhost:3001/" id="logout">Logout</a></li>
+            {{else}}
+              <a href="http://localhost:3001/api/users/login">login</a>
+            {{/if}}
           </ul>
         </div>
       </header>
