--- a/views/subtopic.handlebars
+++ b/views/subtopic.handlebars
@@ -1,4 +1,4 @@
-{{!-- Subtopics page to be loaded in --}}
+Subtopics page to be loaded in
     <div class="container text-center">
         <div class="row p-3">
             <div class="col border border-dark m-1" id="unknown">
