--- a/views/index.html
+++ b/views/index.html
@@ -36,6 +36,7 @@
           </ul>
         </div>
       </header>
+    <main>
       <div
         id="carouselExampleFade"
         class="carousel slide carousel-fade"
@@ -58,7 +59,8 @@
           </div>
           <div class="carousel-item">
             <img src="../public/assets/andrew-neel-9moikpaufvg-unsplash.jpg"
-            class="d-block alt="..." />
+            class="d-block"
+            alt="..." />
           </div>
         </div>
         <button
@@ -80,7 +82,6 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-    <main>
       <div class="card-body">
         <div class="cardHeader">
           <h5 class="card-title">HTML</h5>
