updated the main handlebars to have the carasole work.  Updated seed table to see functionality of description.  Updated topics cards to add in description

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,20 +6,20 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
         <img
-            src="../public/assets/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg"
+            src="./assets/nick-morrison-FHnnjk1Yj7Y-unsplash.jpg"
             class="d-block"
             alt="..."
         />
         </div>
         <div class="carousel-item">
         <img
-            src="../public/assets/cookie-the-pom-gySMaocSdqs-unsplash.jpg"
+            src="./assets/cookie-the-pom-gySMaocSdqs-unsplash.jpg"
             class="d-block"
             alt="..."
         />
         </div>
         <div class="carousel-item">
-        <img src="../public/assets/andrew-neel-9moikpaufvg-unsplash.jpg"
+        <img src="./assets/andrew-neel-9moikpaufvg-unsplash.jpg"
         class="d-block"
         alt="..." />
         </div>
