--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,7 +38,7 @@
     ></script>
   </body>
   <footer class="footer">
-    <div>About</div>
+    <div></div>
     <div></div>
     <div></div>
   </footer>
