--- a/views/partials/topic-cards.handlebars
+++ b/views/partials/topic-cards.handlebars
@@ -5,6 +5,6 @@
             <i class="bi bi-star"></i>
         </button>
     </div>
-    <p class="card-text">
+    <p class="card-text">{{topic_description}}
     </p>
 </div>
