--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="login-page" >
-    <h2>Welcome back to Study Buddies!</h2>
+    <h2>Welcome back to Study Buddy!</h2>
     <form id="login-form">
     <div class="form-group">
       <label for="email-address" class="form-label">Email address:</label></br>
