--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -1,5 +1,5 @@
 <div class="sign-up-page">
-  <h2>Sign up for Study Buddies!</h2>
+  <h2>Sign up for Study Buddy!</h2>
     <form id="signup-form">
       <div class="form-group">
         <label for="username" class="form-label">Username:</label></br>
