--- a/views/partials/topic-cards.handlebars
+++ b/views/partials/topic-cards.handlebars
@@ -1,7 +1,8 @@
-<div class="card-body">
+<div class="card-body homepageCard">
     <div class="cardHeader">
         <h5 class="card-title">{{topic_name}}</h5>
         <button class="btn btn-favorites">
+            <a href="http://localhost:3001/subtopics/{{id}}"></a>
             <i class="bi bi-star"></i>
         </button>
     </div>
