--- a/views/partials/subtopicsDetails-cards.handlebars
+++ b/views/partials/subtopicsDetails-cards.handlebars
@@ -1,8 +1,8 @@
 <div class="card m-1 max-width:100%" style="width: 30%">
-    <div class="card-body" style="width: 18rem">
+    <div class="subtopic-card-body" style="width: 18rem">
         <h5 class="card-title">{{subtopic_name}}</h5>
         <p class="card-text">
         {{code_examples}}
         </p>
     </div>
-</div>
+</div> 
