--- a/views/partials/subtopic-cards.handlebars
+++ b/views/partials/subtopic-cards.handlebars
@@ -1,6 +1,6 @@
 {{!-- Calls the cards subtopic name--}}
 <div class="card m-1" style="width: 18rem">
-    <div class="card-body">
+    <div class=".subtopic-card-body">
         {{!-- Calls the subtopic name--}}
         <h5 class="card-title">{{subtopic_name}}</h5>
        
