--- a/views/subTopicDetails.handlebars
+++ b/views/subTopicDetails.handlebars
@@ -4,7 +4,7 @@
         <div class="row p-3">
             <div class="col border border-dark m-1" id="div1">
                 <div class="card m-1" style="width: 100%">
-                    <div class="card-body">
+                    <div class="subtopic-card-body">
                         <h3 class="description">{{subtopic_name}}</h3>
                         <p class="card-text">{{description}}</p>
                     </div>
