--- a/views/subtopic.handlebars
+++ b/views/subtopic.handlebars
@@ -1,21 +1,21 @@
 Subtopics page to be loaded in
     <div class="container text-center">
         <div class="row p-3">
-            <div class="col border border-dark m-1" id="unknown">
-                <p>Things I Don't Know</p>
+            <div class="col  m-1" id="unknown">
+                <p class="subtopic-category">Things I Don't Know</p>
                     {{#each subtopics as |subtopic| }}
                     {{> subtopic-cards}}
                     {{/each}}
             </div>
-            <div class="col border border-dark m-1" id="neutral">
-                <p>Neutral</p>
+            <div class="col  m-1" id="neutral">
+                <p class="subtopic-category">Neutral</p>
                     {{#each subtopics as |subtopic| }}
                     {{> subtopic-cards}}
                     {{/each}}
 
             </div>
-            <div class="col border border-dark m-1" id="known">
-                <p>Things I Know</p>
+            <div class="col m-1" id="known">
+                <p class="subtopic-category">Things I Know</p>
                     {{#each subtopics as |subtopic| }}
                     {{> subtopic-cards}}
                     {{/each}}
