--- a/views/subtopics.html
+++ b/views/subtopics.html
@@ -21,96 +21,84 @@
         <h1>Study Buddies</h1>
         <nav>hambuger</nav>
       </header>
-      <h2 class="h2 text-center p-3">Subtopics</h2>
+      <h2 class="h2 text-center p-3 subtopic-category">Subtopics</h2>
 <main>
-      <div class="container container-fluid mt-5">
+      <div class="container container-fluid mt-5 ">
         <div class="container text-center">
           <div class="row p-3">
-            <div class= "col border border-dark m-1" id="div1"
-            ondrop="drop(event)" ondragover="allowDrop(event)" >
-            <p>Things I Don't Know</p>
+            <div class= "col  m-1" id="div1">
+            <p class="subtopic-category">Things I Don't Know</p>
             <div
               class="card m-1"
               style="width: 18rem"
-              id="drag1"
-              draggable="true"
-              ondragstart="drag(event)"
-            >
-              <div class="card-body">
+              id="unknown">
+              <div class="subtopic-card-body">
                 <h5 class="card-title">Subtopic</h5>
-                <p class="card-text">Brief description of subtopic</p>
+                
               </div>
             </div>
             <div
               class="card m-1"
               style="width: 18rem"
-              id="drag1"
-              draggable="true"
-              ondragstart="drag(event)"
-            >
-              <div class="card-body">
+              id="uknown">
+
+              <div class="subtopic-card-body">
                 <h5 class="card-title">Subtopic</h5>
-                <p class="card-text">Brief description of subtopic</p>
+                
               </div>
             </div>
           </div>
-          <div class="col border border-dark m-1" id="div1"
+          <div class="col  m-1" id="div1"
             ondrop="drop(event)"
             ondragover="allowDrop(event)">
-             <p>Nuetral</p>
+             <p class="subtopic-category">Nuetral</p>
             <div
               class="card m-1"
               style="width: 18rem"
-              id="drag1"
-              draggable="true"
-              ondragstart="drag(event)"
+              id="nuetral"
+         
             >
-              <div class="card-body">
+              <div class="subtopic-card-body">
                 <h5 class="card-title">Subtopic</h5>
-                <p class="card-text">Brief description of subtopic</p>
               </div>
             </div>
             <div
               class="card m-1"
               style="width: 18rem"
-              id="drag1"
-              draggable="true"
-              ondragstart="drag(event)"
+              id="nuetral"
+        
             >
-              <div class="card-body">
+              <div class="subtopic-card-body">
                 <h5 class="card-title">Subtopic</h5>
-                <p class="card-text">Brief description of subtopic</p>
+               
               </div>
             </div>
           </div>
-          <div class="col border border-dark m-1"
+          <div class="col  m-1"
             id="div1"
-            ondrop="drop(event)"
-            ondragover="allowDrop(event)"
+    
           >
-             <p>Things I Know</p>
+             <p class="subtopic-category">Things I Know</p>
             <div
               class="card m-1"
               style="width: 18rem"
-              id="drag1"
-              draggable="true"
-              ondragstart="drag(event)"
+              id="known"
+           
             >
-              <div class="card-body">
+              <div class="subtopic-card-body">
                 <h5 class="card-title">Subtopic</h5>
-                <p class="card-text">Brief description of subtopic</p>
+               
               </div>
             </div>
             <div
               class="card m-1"
               style="width: 18rem"
-              id="drag1"
-              draggable="true"
-              ondragstart="drag(event)"
+              id="known"
+        
             >
-              <div class="card-body">
+              <div class="subtopic-card-body">
                 <h5 class="card-title">Subtopic</h5>
-                <p class="card-text">Brief description of subtopic</p>
+               
               </div>
             </div>
           </div>
