--- a/views/subtopicsDetail.html
+++ b/views/subtopicsDetail.html
@@ -1,16 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Study Buddies</title>
+    <link rel="stylesheet" href="../public/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
+  </head>
+
+  <body class="body">
+    <div class="flex-column justify-space-around">
+      <header class="header">
+        <div>Logo</div>
+        <h1>Study Buddies</h1>
+        <nav>hambuger</nav>
+      </header>
+      <h2 class="h2 text-center p-3">Subtopics</h2>
+<main>
+
 <div class="container container-fluid mt-5">
     <div class="container">
         <div class="row p-3">
-            <div class="col border border-dark m-1" id="div1">
+            <div class="border border-dark m-1" id="div1">
                 <div class="card m-1" style="width: 100%">
-                    <div class="card-body">
-                        <h3 class="description">Description</h3>
+                    <div class="subtopic-card-body">
+                        <h3 class="description card-title">Subtopic Name</h3>
                         <p class="card-text">Brief description pulled from db</p>
                     </div>
                 </div>
-                <div class="card m-1" style="width: 100%">
+                <!-- <div class="card m-1" style="width: 100%">
                     <div class="card-body">
-                        <h3 class="exampleCode text-left">Code Demos</h3>
+                        <h3 class="subtopic-category text-left">Code Demos</h3>
                         <p class="card-text">
                             <b>pull from db a demo of the code </b> Lorem ipsum dolor
                             sit amet consectetur adipisicing elit. Soluta sit illo enim
@@ -19,12 +45,12 @@
                             minima necessitatibus quas!
                         </p>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="col border border-dark m-1 text-center">
-                <h3>Code examples</h3>
+                <h3 class="subtopic-category">Code examples</h3>
                 <div class="card m-1" style="width: 100%">
-                    <div class="card-body">
+                    <div class="subtopic-card-body">
                         <h5 class="card-title">Code Title from DB</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -35,7 +61,7 @@
                     </div>
                 </div>
                 <div class="card m-1" style="width: 100%">
-                    <div class="card-body">
+                    <div class="subtopic-card-body">
                         <h5 class="card-title">Code Title from DB</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -46,7 +72,7 @@
                     </div>
                 </div>
                 <div class="card m-1" style="width: 100%">
-                    <div class="card-body">
+                    <div class="subtopic-card-body">
                         <h5 class="card-title">Code Title from DB</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -60,3 +86,17 @@
         </div>
     </div>
 </div>
+</main>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+  <footer class="footer">
+    <div>about</div>
+    <div>links</div>
+    <div>contact us</div>
+  </footer>
+</html>
