Debugging topic-cardClick.js & subtopics-routes.js

--- a/views/partials/topic-cards.handlebars
+++ b/views/partials/topic-cards.handlebars
@@ -1,11 +1,11 @@
-<div class="card-body homepageCard">
-    <div class="cardHeader">
-        <h5 class="card-title">{{topic_name}}</h5>
-        <button class="btn btn-favorites">
-            <a href="http://localhost:3001/subtopics/{{id}}"></a>
-            <i class="bi bi-star"></i>
-        </button>
-    </div>
-    <p class="card-text">{{topic_description}}
-    </p>
+<div class="card-body homepageCard {{topic_name}}" id="{{id}}">
+  <div class="cardHeader">
+    <h5 class="card-title">{{topic_name}}</h5>
+    <button class="btn btn-favorites">
+      <a href="http://localhost:3001/subtopics/"></a>
+      <i class="bi bi-star"></i>
+    </button>
+  </div>
+  <p class="card-text">{{topic_description}}
+  </p>
 </div>
