--- a/views/sign-up.html
+++ b/views/sign-up.html
@@ -16,9 +16,9 @@
 
   <body class="body">
     <header class="header justify-space-around">
-        <span>Logo</span>
-        <h1>Study Buddies</h1>
-        <nav>Hamburger</nav>
+      <img id="logo" src="../public/assets/STUDY-BUDDIDES-LOGO.png" alt="" />
+        <h1 class="headings">Study Buddies</h1>
+        <!-- <nav>Hamburger</nav> -->
     </header>
     <main>
         <div class="sign-up-page">
@@ -45,8 +45,8 @@
     </main>
     <footer class="footer">
         <div>about</div>
-        <div>links</div>
-        <div>contact us</div>
+        <div></div>
+        <div></div>
       </footer>
   </body>
 </html>
