--- a/views/subtopic.handlebars
+++ b/views/subtopic.handlebars
@@ -3,19 +3,29 @@
         <div class="col border border-dark m-1" id="unknown">
             <p>Things I Don't Know</p>
                 {{#each subtopics as |subtopic| }}
+                {{#if (sortStatus status 1) }}
                 {{> subtopic-cards}}
+           
+                {{/if}}
                 {{/each}}
         </div>
         <div class="col border border-dark m-1" id="neutral">
             <p>Neutral</p>
                 {{#each subtopics as |subtopic| }}
+                {{#if (sortStatus status 2) }}
                 {{> subtopic-cards}}
+           
+                {{/if}}
+
                 {{/each}}
         </div>
         <div class="col border border-dark m-1" id="known">
             <p>Things I Know</p>
                 {{#each subtopics as |subtopic| }}
+                {{#if (sortStatus status 3) }}
                 {{> subtopic-cards}}
+           
+                {{/if}}
                 {{/each}}
         </div>
     </div>
