--- a/views/partials/subtopic-cards.handlebars
+++ b/views/partials/subtopic-cards.handlebars
@@ -1,8 +1,7 @@
 {{! Calls the cards subtopic name}}
-<div class="card m-1" style="width: 18rem">
-  <div class="card-body">
+<div class="card m-1" style="min-width: 16rem;">
+  <div class="card-body" style="min-width: 80%; margin-inline: auto;">
     {{! Calls the subtopic name}}
     <h5 class="card-title">{{name}}</h5>
-
   </div>
 </div>
