fixed the card stylings on homepage, fixed routes in main handlebars

--- a/views/partials/topic-cards.handlebars
+++ b/views/partials/topic-cards.handlebars
@@ -1,5 +1,5 @@
-<a href="/api/subtopics?id={{id}}">
-  <div class="card-body homepageCard {{topic_name}}" id="{{id}}">
+<a href="/api/subtopics?id={{id}}" class="card-body">
+  <div class="homepageCard {{topic_name}}" id="{{id}}">
     <div class="cardHeader">
       <h5 class="card-title">{{topic_name}}</h5>
       <button class="btn btn-favorites">
