--- a/views/partials/subtopic-cards.handlebars
+++ b/views/partials/subtopic-cards.handlebars
@@ -1,5 +1,5 @@
 {{! Calls the cards subtopic name}}
-<div class="card m-1" style="min-width: 16rem;" id="test">
+<div>
   <div class="card-body" style="min-width: 80%; margin-inline: auto;">
     {{! Calls the subtopic name}}
     <h5 class="card-title">{{name}}</h5>
