--- a/views/subtopic.handlebars
+++ b/views/subtopic.handlebars
@@ -1,6 +1,6 @@
 <div class="container text-center">
     <div class="row p-3">
-        <div class="col border border-dark m-1"  id="unknown">
+        <div class="subtopic-section col" id="unknown">
             <p>Things I Don't Know</p>
                 {{#each subtopics as |subtopic| }}
                 {{#if (sortStatus status 1) }}
@@ -8,7 +8,7 @@
                 {{/if}}
                 {{/each}}
         </div>
-        <div class="col border border-dark m-1" id="neutral" >
+        <div class="subtopic-section col" id="neutral" >
             <p>Neutral</p>
                 {{#each subtopics as |subtopic| }}
                 {{#if (sortStatus status 2) }}
@@ -16,7 +16,7 @@
                 {{/if}}
                 {{/each}}
         </div>
-        <div class="col border border-dark m-1" id="known">
+        <div class="subtopic-section col" id="known">
             <p>Things I Know</p>
                 {{#each subtopics as |subtopic| }}
                 {{#if (sortStatus status 3) }}
