--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,9 @@
   --darker: rgba(0, 0, 0, 0.5);
   --background: rgb(67, 63, 63);
 }
-
+a {
+  text-decoration: none;
+}
 .body {
   background-color: rgb(67, 63, 63);
 }
@@ -42,16 +44,16 @@
   display: flex;
   margin-top: -1.5vh;
   height: 75%;
-  color: var(--neonBlue) ;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: var(--neonBlue);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1.5rem;
 }
 
-.dropbox:hover{
+.dropbox:hover {
   cursor: pointer;
   height: 115%;
-  background: rgb(92,225,230);
-  background: linear-gradient(18deg, rgba(92,225,230,1) 16%, rgba(143,171,230,1) 47%, rgba(203,108,230,1) 80%);
+  background: rgb(92, 225, 230);
+  background: linear-gradient(18deg, rgba(92, 225, 230, 1) 16%, rgba(143, 171, 230, 1) 47%, rgba(203, 108, 230, 1) 80%);
   color: var(--dark);
 }
 
@@ -102,8 +104,8 @@
 
 .card-body:hover {
   cursor: pointer;
-  background: rgb(92,225,230);
-  background: linear-gradient(18deg, rgba(92,225,230,1) 16%, rgba(143,171,230,1) 47%, rgba(203,108,230,1) 80%);
+  background: rgb(92, 225, 230);
+  background: linear-gradient(18deg, rgba(92, 225, 230, 1) 16%, rgba(143, 171, 230, 1) 47%, rgba(203, 108, 230, 1) 80%);
   color: black;
 }
 
@@ -132,13 +134,13 @@ main {
   color: var(--neonMagenta);
 }
 
-.carousel{
+.carousel {
   position: absolute;
   opacity: 40%;
   filter: blur(2px);
   z-index: -1;
 }
-.carousel-item img{
+.carousel-item img {
   width: 100%;
   height: 100%;
 }
@@ -160,7 +162,7 @@ main {
 @media only screen and (max-width: 768px) {
   .card-body {
     max-width: 100%;
-    margin-inline: 5%
+    margin-inline: 5%;
   }
 
   main {
