fixed the routes in login and sign-up handlebars

--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -18,5 +18,5 @@
         <button type="submit" class="submitBtn">Login</button>
       </div>
     </form>
-  <a href="http://localhost:3001/api/users/login">Already have an account? Click here to login!</a>
+  <a href="/api/users/login">Already have an account? Click here to login!</a>
 </div>
