--- a/views/subTopicDetails.handlebars
+++ b/views/subTopicDetails.handlebars
@@ -23,36 +23,26 @@
             {{/each}}
         </div> --}}
 
-<div class="container">
-  <div class="row">
-    <div class="col-12 col-md-6 | bg-secondary">
-      <div class="description-container">
-        <h3>{{subtopic_name}}</h3>
-        <p>{{description}}</p>
-      </div>
-    </div>
-    <div class="col-12 col-md-6 | bg-primary">
-      <div class="code-examples-container">
-        <h3>Code Example</h3>
+<div class="details-container container">
 
-        <code> {{code_examples}} </code>
-      </div>
+  <div class="description-examples">
+    <div class="description-card card-style">
+      <h3>{{subtopic_name}}</h3>
+      <p>{{description}}</p>
     </div>
-    <div class="col-12 | bg-info">
-      <div class="code-demo">
-        <h3>Code Demo</h3>
-      </div>
-    </div>
-    <div class="col-12 | bg-danger">
-      <div class="code-demo">
-        <h3>Resources</h3>
-        <ul>
-          {{#each resources as |resource|}}
-            <li><a href="{{resource}}" target="_blank">{{resource}}</a></li>
-          {{/each}}
-        </ul>
-      </div>
+
+    <div class="examples-card card-style">
+      <h3>Code Example</h3>
+      <code> {{code_examples}} </code>
     </div>
   </div>
-  <div class="row"></div>
+
+  <div class="resources-card card-style">
+    <h3>Resources</h3>
+    <ul>
+      {{#each resources as |resource|}}
+        <li><a href="{{resource}}" target="_blank">{{resource}}</a></li>
+      {{/each}}
+    </ul>
+  </div>
 </div>
