Added styling to delete/add buttons.

--- a/views/partials/subtopic-cards.handlebars
+++ b/views/partials/subtopic-cards.handlebars
@@ -4,7 +4,7 @@
   <div>
     <div class="card-body" style="min-width: 80%; margin-inline: auto;">
       {{! Calls the subtopic name}}
-      <h5 class="card-title">{{name}}</h5>
+      <h5 class="card-title">{{name}}test</h5>
     </div>
   </div>
 </a>
