--- a/views/partials/topic-cards.handlebars
+++ b/views/partials/topic-cards.handlebars
@@ -7,7 +7,7 @@
           <i class="bi bi-star"></i>
         </button>
       </div>
-      <p class="card-text">{{topic_description}}
+      <p class="card-text text-light">{{topic_description}}
       </p>
     </div>
   </a>
