Commented out add/edit/delete buttons in handlebars.

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -46,6 +46,6 @@
 {{#each topics as |topic| }}
 {{> topic-cards}}
 {{/each}}
-<div class="button-container col-12 d-flex justify-content-center">
+{{!-- <div class="button-container col-12 d-flex justify-content-center">
       <button id="add">Add a new topic here</button>
-</div>
+</div> --}}
