--- a/views/partials/topic-cards.handlebars
+++ b/views/partials/topic-cards.handlebars
@@ -11,6 +11,6 @@
       </p>
     </div>
   </a>
-  <button id="delete">delete</button>
+  {{! <button id="delete">delete</button> }}
   {{! <button id="edit">edit</button> }}
 </div>
